--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"@types/node": "^24.7.0",
 		"@types/react": "^19.2.10",
 		"@types/react-dom": "^19.2.3",
+		"@types/sql.js": "^1.4.9",
 		"@vitejs/plugin-react": "^5.1.2",
 		"autoprefixer": "^10.4.23",
 		"postcss": "^8.5.6",
@@ -40,6 +41,7 @@
 		"@babylonjs/post-processes": "^8.36.1",
 		"animejs": "^4.3.5",
 		"astro": "^5.16.16",
+		"idb": "^8.0.3",
 		"immer": "^11.1.3",
 		"miniplex": "^2.0.0",
 		"react": "^19.2.4",
@@ -48,6 +50,7 @@
 		"react-reconciler": "^0.31.0",
 		"seedrandom": "^3.0.5",
 		"simplex-noise": "^4.0.3",
+		"sql.js": "^1.13.0",
 		"tone": "^15.1.22",
 		"yuka": "^0.7.8",
 		"zustand": "^5.0.10"
