feat(assets): import Skeleton enemies and Dungeon props from KayKit

--- a/public/assets/manifest.json
+++ b/public/assets/manifest.json
@@ -6,12 +6,16 @@
   "/assets/models/characters/enemies/Skeleton_Axe.gltf",
   "/assets/models/characters/enemies/Skeleton_Blade.gltf",
   "/assets/models/characters/enemies/Skeleton_Crossbow.gltf",
+  "/assets/models/characters/enemies/Skeleton_Mage.glb",
+  "/assets/models/characters/enemies/Skeleton_Minion.glb",
   "/assets/models/characters/enemies/Skeleton_Quiver.gltf",
+  "/assets/models/characters/enemies/Skeleton_Rogue.glb",
   "/assets/models/characters/enemies/Skeleton_Shield_Large_A.gltf",
   "/assets/models/characters/enemies/Skeleton_Shield_Large_B.gltf",
   "/assets/models/characters/enemies/Skeleton_Shield_Small_A.gltf",
   "/assets/models/characters/enemies/Skeleton_Shield_Small_B.gltf",
   "/assets/models/characters/enemies/Skeleton_Staff.gltf",
+  "/assets/models/characters/enemies/Skeleton_Warrior.glb",
   "/assets/models/characters/humanoid/Alpaca.gltf",
   "/assets/models/characters/humanoid/BaseCharacter.gltf",
   "/assets/models/characters/humanoid/Bat.gltf",
