--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 	},
 	"devDependencies": {
 		"@biomejs/biome": "^2.3.13",
+		"@playwright/test": "^1.58.0",
 		"@tailwindcss/vite": "^4.1.18",
 		"@types/node": "^24.7.0",
 		"@types/react": "^19.2.10",
@@ -23,13 +24,15 @@
 		"@types/sql.js": "^1.4.9",
 		"@vitejs/plugin-react": "^5.1.2",
 		"autoprefixer": "^10.4.23",
+		"jsdom": "^27.4.0",
 		"postcss": "^8.5.6",
 		"tailwindcss": "^4.1.18",
 		"typescript": "^5.9.3",
 		"vite": "^6.2.3",
 		"vite-plugin-compression": "^0.5.1",
 		"vite-plugin-glsl": "^1.5.4",
-		"vite-plugin-html": "^3.2.2"
+		"vite-plugin-html": "^3.2.2",
+		"vitest": "^4.0.18"
 	},
 	"dependencies": {
 		"@astrojs/react": "^4.4.2",
