feat(e2e): implement E2EGovernor for automated gameplay testing and fix asset loading paths

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 		"@types/react-dom": "^19.2.3",
 		"@types/seedrandom": "^3.0.8",
 		"@types/sql.js": "^1.4.9",
+		"@types/yuka": "^0.7.4",
 		"@vitejs/plugin-react": "^5.1.2",
 		"autoprefixer": "^10.4.23",
 		"jsdom": "^27.4.0",
