--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 	},
 	"devDependencies": {
 		"@biomejs/biome": "^2.3.13",
+		"@capacitor/cli": "^8.0.2",
 		"@playwright/test": "^1.58.0",
 		"@tailwindcss/vite": "^4.1.18",
 		"@types/node": "^24.7.0",
@@ -44,6 +45,11 @@
 		"@babylonjs/loaders": "^8.36.1",
 		"@babylonjs/materials": "^8.36.1",
 		"@babylonjs/post-processes": "^8.36.1",
+		"@capacitor/android": "^8.0.2",
+		"@capacitor/core": "^8.0.2",
+		"@capacitor/ios": "^8.0.2",
+		"@ionic/react": "^8.7.17",
+		"@ionic/react-router": "^8.7.17",
 		"animejs": "^4.3.5",
 		"astro": "^5.16.16",
 		"idb": "^8.0.3",
