--- a/package.json
+++ b/package.json
@@ -11,7 +11,13 @@
   "dependencies": {
     "expo": "~54.0.32",
     "expo-asset": "~12.0.12",
+    "expo-dev-client": "~6.0.20",
+    "expo-font": "~14.0.11",
+    "expo-navigation-bar": "~5.0.10",
+    "expo-splash-screen": "~31.0.13",
+    "expo-sqlite": "~16.0.10",
     "expo-status-bar": "~3.0.9",
+    "expo-system-ui": "~6.0.9",
     "miniplex": "^2.0.0",
     "react": "19.1.0",
     "react-native": "0.81.5",
