--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@dimforge/rapier3d-compat": "^0.19.3",
     "expo": "~54.0.32",
     "expo-asset": "~12.0.12",
     "expo-dev-client": "~6.0.20",
