--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "19.1.0",
     "react-native": "0.81.5",
     "react-native-filament": "^1.9.0",
+    "react-native-gesture-handler": "~2.28.0",
     "react-native-reanimated": "^4.2.1",
     "seedrandom": "^3.0.5",
     "simplex-noise": "^4.0.3",
