--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react-native": "0.81.5",
     "react-native-filament": "^1.9.0",
     "react-native-gesture-handler": "~2.28.0",
-    "react-native-reanimated": "^4.2.1",
+    "react-native-reanimated": "^4.1.6",
+    "react-native-worklets": "0.5.1",
     "seedrandom": "^3.0.5",
     "simplex-noise": "^4.0.3",
     "yuka": "^0.7.8",
