--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@dimforge/rapier3d-compat": "^0.19.3",
     "expo": "~54.0.32",
     "expo-asset": "~12.0.12",
+    "expo-av": "~16.0.8",
     "expo-dev-client": "~6.0.20",
     "expo-font": "~14.0.11",
     "expo-navigation-bar": "~5.0.10",
